[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tea"
version = "0.4.3"
description = "Manage tmuxp session configurations"
authors = ["Kiyoshi '13k' Murata <kbmurata@gmail.com>"]

[tool.poetry.scripts]
tea = 'tea.cli:main'

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
tmuxp = "^1.27.0"

[tool.poetry.dev-dependencies]
black = "^22.1"
mypy = "^0.931"
ptpython = "^3.0"
pylint = "^2.12"
reorder-python-imports = "^3.0.1"
rope = "^0.23"
types-PyYAML = "^5.4"

[tool.black]
line-length = 98
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | tmp
  )/
)
'''

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = 98
