[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tea"
version = "0.4.5"
description = "Manage tmuxp session configurations"
authors = ["Kiyoshi '13k' Murata <kbmurata@proton.me>"]

[tool.poetry.scripts]
tea = 'tea.cli:main'

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
tmuxp = "^1.27.0"

[tool.poetry.dev-dependencies]
black = "^24.3"
mypy = "^1.0"
ptpython = "^3.0"
types-PyYAML = "^6.0"

[tool.black]
line-length = 98
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | tmp
  )/
)
'''

[tool.ruff]
line-length = 98

[tool.mypy]
python_version = "3.10"
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
follow_imports = "normal"
ignore_missing_imports = true
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_errors = false
implicit_reexport = false
local_partial_types = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
