[project]
name = "tea"
version = "0.4.5"
description = "Manage tmuxp session configurations"
authors = [{ name = "13k", email = "tea.0f4cw@slmail.me" }]
readme = "README.md"
license = { file = "LICENSE" }
urls = { homepage = "https://github.com/13k/tea" }
requires-python = ">= 3.12"
classifiers = ["Private :: Do Not Upload"]
dependencies = ["pyyaml~=6.0", "tmuxp~=1.46"]

[project.scripts]
"tea" = "tea.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ptpython~=3.0", "mypy~=1.10", "types-pyyaml~=6.0"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tea"]

[tool.ruff]
target-version = "py312"
line-length = 98
indent-width = 4
include = ["src/**/*.py"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = [
  # flake8-bugbear
  "B",
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # isort
  "I",
  # flake8-simplify
  "SIM",
  # pyupgrade
  "UP",
  # ruff
  "RUF100",
]

[tool.pyright]
stubPath = "stubs"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
include = ["src/**/*.py"]
